E5/parser.output
Terminals unused in grammar

    TK_TIPO
    TK_ER


Grammar

    0 $accept: programa $end

    1 programa: lista ';'
    2         | ε

    3 lista: elemento
    4      | elemento ',' lista

    5 elemento: declaracao_variavel
    6         | declaracao_funcao

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num
    8                    | TK_VAR TK_ID TK_ATRIB tipo_num TK_COM literal

    9 declaracao_funcao: cabecalho_funcao bloco_de_comandos

   10 $@1: ε

   11 cabecalho_funcao: TK_ID TK_SETA tipo_num $@1 lista_parametros_opcional TK_ATRIB

   12 lista_parametros_opcional: lista_parametros
   13                          | ε

   14 lista_parametros: TK_COM parametros
   15                 | parametros

   16 parametros: parametro
   17           | parametro ',' parametros

   18 parametro: TK_ID TK_ATRIB tipo_num

   19 $@2: ε

   20 bloco_de_comandos: '[' $@2 ']'

   21 $@3: ε

   22 bloco_de_comandos: '[' $@3 sequencia_comandos ']'

   23 sequencia_comandos: comando
   24                   | comando sequencia_comandos

   25 comando: matched_statement
   26        | unmatched_statement

   27 matched_statement: TK_SE '(' expressao ')' matched_statement TK_SENAO matched_statement
   28                  | outro_comando

   29 unmatched_statement: TK_SE '(' expressao ')' comando
   30                    | TK_SE '(' expressao ')' matched_statement TK_SENAO unmatched_statement

   31 outro_comando: bloco_de_comandos
   32              | declaracao_variavel
   33              | atribuicao
   34              | chamada_funcao
   35              | retorno
   36              | repeticao

   37 literal: TK_LI_INTEIRO
   38        | TK_LI_DECIMAL

   39 atribuicao: TK_ID TK_ATRIB expressao

   40 chamada_funcao: TK_ID '(' ')'
   41               | TK_ID '(' argumentos ')'

   42 argumentos: expressao
   43           | expressao ',' argumentos

   44 retorno: TK_RETORNA expressao TK_ATRIB tipo_num

   45 repeticao: TK_ENQUANTO '(' expressao ')' bloco_de_comandos

   46 tipo_num: TK_DECIMAL
   47         | TK_INTEIRO

   48 expressao: expr_logica_ou

   49 expr_logica_ou: expr_logica_ou '|' expr_logica_e
   50               | expr_logica_e

   51 expr_logica_e: expr_logica_e '&' expr_igualdade
   52              | expr_igualdade

   53 expr_igualdade: expr_igualdade TK_OC_EQ expr_relacional
   54               | expr_igualdade TK_OC_NE expr_relacional
   55               | expr_relacional

   56 expr_relacional: expr_relacional '<' expr_aditiva
   57                | expr_relacional '>' expr_aditiva
   58                | expr_relacional TK_OC_LE expr_aditiva
   59                | expr_relacional TK_OC_GE expr_aditiva
   60                | expr_aditiva

   61 expr_aditiva: expr_aditiva '+' expr_multiplicativa
   62             | expr_aditiva '-' expr_multiplicativa
   63             | expr_multiplicativa

   64 expr_multiplicativa: expr_multiplicativa '*' expr_unaria
   65                    | expr_multiplicativa '/' expr_unaria
   66                    | expr_multiplicativa '%' expr_unaria
   67                    | expr_unaria

   68 expr_unaria: '+' fator
   69            | '-' fator
   70            | '!' fator
   71            | fator

   72 fator: TK_ID
   73      | literal
   74      | chamada_funcao
   75      | '(' expressao ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 70
    '%' (37) 66
    '&' (38) 51
    '(' (40) 27 29 30 40 41 45 75
    ')' (41) 27 29 30 40 41 45 75
    '*' (42) 64
    '+' (43) 61 68
    ',' (44) 4 17 43
    '-' (45) 62 69
    '/' (47) 65
    ';' (59) 1
    '<' (60) 56
    '>' (62) 57
    '[' (91) 20 22
    ']' (93) 20 22
    '|' (124) 49
    error (256)
    TK_TIPO (258)
    TK_VAR (259) 7 8
    TK_SENAO (260) 27 30
    TK_DECIMAL (261) 46
    TK_SE (262) 27 29 30
    TK_INTEIRO (263) 47
    TK_ATRIB (264) 7 8 11 18 39 44
    TK_RETORNA (265) 44
    TK_SETA (266) 11
    TK_ENQUANTO (267) 45
    TK_COM (268) 8 14
    TK_OC_LE (269) 58
    TK_OC_GE (270) 59
    TK_OC_EQ (271) 53
    TK_OC_NE (272) 54
    TK_ID <valor_lexico> (273) 7 8 11 18 39 40 41 72
    TK_LI_INTEIRO <valor_lexico> (274) 37
    TK_LI_DECIMAL <valor_lexico> (275) 38
    TK_ER (276)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa <nodo_arvore> (39)
        on left: 1 2
        on right: 0
    lista <nodo_arvore> (40)
        on left: 3 4
        on right: 1 4
    elemento <nodo_arvore> (41)
        on left: 5 6
        on right: 3 4
    declaracao_variavel <nodo_arvore> (42)
        on left: 7 8
        on right: 5 32
    declaracao_funcao <nodo_arvore> (43)
        on left: 9
        on right: 6
    cabecalho_funcao <nodo_arvore> (44)
        on left: 11
        on right: 9
    $@1 (45)
        on left: 10
        on right: 11
    lista_parametros_opcional <nodo_arvore> (46)
        on left: 12 13
        on right: 11
    lista_parametros <nodo_arvore> (47)
        on left: 14 15
        on right: 12
    parametros <nodo_arvore> (48)
        on left: 16 17
        on right: 14 15 17
    parametro <nodo_arvore> (49)
        on left: 18
        on right: 16 17
    bloco_de_comandos <nodo_arvore> (50)
        on left: 20 22
        on right: 9 31 45
    $@2 (51)
        on left: 19
        on right: 20
    $@3 (52)
        on left: 21
        on right: 22
    sequencia_comandos <nodo_arvore> (53)
        on left: 23 24
        on right: 22 24
    comando <nodo_arvore> (54)
        on left: 25 26
        on right: 23 24 29
    matched_statement <nodo_arvore> (55)
        on left: 27 28
        on right: 25 27 30
    unmatched_statement <nodo_arvore> (56)
        on left: 29 30
        on right: 26 30
    outro_comando <nodo_arvore> (57)
        on left: 31 32 33 34 35 36
        on right: 28
    literal <nodo_arvore> (58)
        on left: 37 38
        on right: 8 73
    atribuicao <nodo_arvore> (59)
        on left: 39
        on right: 33
    chamada_funcao <nodo_arvore> (60)
        on left: 40 41
        on right: 34 74
    argumentos <nodo_arvore> (61)
        on left: 42 43
        on right: 41 43
    retorno <nodo_arvore> (62)
        on left: 44
        on right: 35
    repeticao <nodo_arvore> (63)
        on left: 45
        on right: 36
    tipo_num <tipo_dado> (64)
        on left: 46 47
        on right: 7 8 11 18 44
    expressao <nodo_arvore> (65)
        on left: 48
        on right: 27 29 30 39 42 43 44 45 75
    expr_logica_ou <nodo_arvore> (66)
        on left: 49 50
        on right: 48 49
    expr_logica_e <nodo_arvore> (67)
        on left: 51 52
        on right: 49 50 51
    expr_igualdade <nodo_arvore> (68)
        on left: 53 54 55
        on right: 51 52 53 54
    expr_relacional <nodo_arvore> (69)
        on left: 56 57 58 59 60
        on right: 53 54 55 56 57 58 59
    expr_aditiva <nodo_arvore> (70)
        on left: 61 62 63
        on right: 56 57 58 59 60 61 62
    expr_multiplicativa <nodo_arvore> (71)
        on left: 64 65 66 67
        on right: 61 62 63 64 65 66
    expr_unaria <nodo_arvore> (72)
        on left: 68 69 70 71
        on right: 64 65 66 67
    fator <nodo_arvore> (73)
        on left: 72 73 74 75
        on right: 68 69 70 71


State 0

    0 $accept: • programa $end

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    $default  reduce using rule 2 (programa)

    programa             go to state 3
    lista                go to state 4
    elemento             go to state 5
    declaracao_variavel  go to state 6
    declaracao_funcao    go to state 7
    cabecalho_funcao     go to state 8


State 1

    7 declaracao_variavel: TK_VAR • TK_ID TK_ATRIB tipo_num
    8                    | TK_VAR • TK_ID TK_ATRIB tipo_num TK_COM literal

    TK_ID  shift, and go to state 9


State 2

   11 cabecalho_funcao: TK_ID • TK_SETA tipo_num $@1 lista_parametros_opcional TK_ATRIB

    TK_SETA  shift, and go to state 10


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 11


State 4

    1 programa: lista • ';'

    ';'  shift, and go to state 12


State 5

    3 lista: elemento •
    4      | elemento • ',' lista

    ','  shift, and go to state 13

    $default  reduce using rule 3 (lista)


State 6

    5 elemento: declaracao_variavel •

    $default  reduce using rule 5 (elemento)


State 7

    6 elemento: declaracao_funcao •

    $default  reduce using rule 6 (elemento)


State 8

    9 declaracao_funcao: cabecalho_funcao • bloco_de_comandos

    '['  shift, and go to state 14

    bloco_de_comandos  go to state 15


State 9

    7 declaracao_variavel: TK_VAR TK_ID • TK_ATRIB tipo_num
    8                    | TK_VAR TK_ID • TK_ATRIB tipo_num TK_COM literal

    TK_ATRIB  shift, and go to state 16


State 10

   11 cabecalho_funcao: TK_ID TK_SETA • tipo_num $@1 lista_parametros_opcional TK_ATRIB

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 19


State 11

    0 $accept: programa $end •

    $default  accept


State 12

    1 programa: lista ';' •

    $default  reduce using rule 1 (programa)


State 13

    4 lista: elemento ',' • lista

    TK_VAR  shift, and go to state 1
    TK_ID   shift, and go to state 2

    lista                go to state 20
    elemento             go to state 5
    declaracao_variavel  go to state 6
    declaracao_funcao    go to state 7
    cabecalho_funcao     go to state 8


State 14

   20 bloco_de_comandos: '[' • $@2 ']'
   22                  | '[' • $@3 sequencia_comandos ']'

    ']'       reduce using rule 19 ($@2)
    $default  reduce using rule 21 ($@3)

    $@2  go to state 21
    $@3  go to state 22


State 15

    9 declaracao_funcao: cabecalho_funcao bloco_de_comandos •

    $default  reduce using rule 9 (declaracao_funcao)


State 16

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB • tipo_num
    8                    | TK_VAR TK_ID TK_ATRIB • tipo_num TK_COM literal

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 23


State 17

   46 tipo_num: TK_DECIMAL •

    $default  reduce using rule 46 (tipo_num)


State 18

   47 tipo_num: TK_INTEIRO •

    $default  reduce using rule 47 (tipo_num)


State 19

   11 cabecalho_funcao: TK_ID TK_SETA tipo_num • $@1 lista_parametros_opcional TK_ATRIB

    $default  reduce using rule 10 ($@1)

    $@1  go to state 24


State 20

    4 lista: elemento ',' lista •

    $default  reduce using rule 4 (lista)


State 21

   20 bloco_de_comandos: '[' $@2 • ']'

    ']'  shift, and go to state 25


State 22

   22 bloco_de_comandos: '[' $@3 • sequencia_comandos ']'

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 26
    TK_RETORNA   shift, and go to state 27
    TK_ENQUANTO  shift, and go to state 28
    TK_ID        shift, and go to state 29
    '['          shift, and go to state 14

    declaracao_variavel  go to state 30
    bloco_de_comandos    go to state 31
    sequencia_comandos   go to state 32
    comando              go to state 33
    matched_statement    go to state 34
    unmatched_statement  go to state 35
    outro_comando        go to state 36
    atribuicao           go to state 37
    chamada_funcao       go to state 38
    retorno              go to state 39
    repeticao            go to state 40


State 23

    7 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num •
    8                    | TK_VAR TK_ID TK_ATRIB tipo_num • TK_COM literal

    TK_COM  shift, and go to state 41

    $default  reduce using rule 7 (declaracao_variavel)


State 24

   11 cabecalho_funcao: TK_ID TK_SETA tipo_num $@1 • lista_parametros_opcional TK_ATRIB

    TK_COM  shift, and go to state 42
    TK_ID   shift, and go to state 43

    $default  reduce using rule 13 (lista_parametros_opcional)

    lista_parametros_opcional  go to state 44
    lista_parametros           go to state 45
    parametros                 go to state 46
    parametro                  go to state 47


State 25

   20 bloco_de_comandos: '[' $@2 ']' •

    $default  reduce using rule 20 (bloco_de_comandos)


State 26

   27 matched_statement: TK_SE • '(' expressao ')' matched_statement TK_SENAO matched_statement
   29 unmatched_statement: TK_SE • '(' expressao ')' comando
   30                    | TK_SE • '(' expressao ')' matched_statement TK_SENAO unmatched_statement

    '('  shift, and go to state 48


State 27

   44 retorno: TK_RETORNA • expressao TK_ATRIB tipo_num

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expressao            go to state 58
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 28

   45 repeticao: TK_ENQUANTO • '(' expressao ')' bloco_de_comandos

    '('  shift, and go to state 67


State 29

   39 atribuicao: TK_ID • TK_ATRIB expressao
   40 chamada_funcao: TK_ID • '(' ')'
   41               | TK_ID • '(' argumentos ')'

    TK_ATRIB  shift, and go to state 68
    '('       shift, and go to state 69


State 30

   32 outro_comando: declaracao_variavel •

    $default  reduce using rule 32 (outro_comando)


State 31

   31 outro_comando: bloco_de_comandos •

    $default  reduce using rule 31 (outro_comando)


State 32

   22 bloco_de_comandos: '[' $@3 sequencia_comandos • ']'

    ']'  shift, and go to state 70


State 33

   23 sequencia_comandos: comando •
   24                   | comando • sequencia_comandos

    TK_VAR       shift, and go to state 1
    TK_SE        shift, and go to state 26
    TK_RETORNA   shift, and go to state 27
    TK_ENQUANTO  shift, and go to state 28
    TK_ID        shift, and go to state 29
    '['          shift, and go to state 14

    $default  reduce using rule 23 (sequencia_comandos)

    declaracao_variavel  go to state 30
    bloco_de_comandos    go to state 31
    sequencia_comandos   go to state 71
    comando              go to state 33
    matched_statement    go to state 34
    unmatched_statement  go to state 35
    outro_comando        go to state 36
    atribuicao           go to state 37
    chamada_funcao       go to state 38
    retorno              go to state 39
    repeticao            go to state 40


State 34

   25 comando: matched_statement •

    $default  reduce using rule 25 (comando)


State 35

   26 comando: unmatched_statement •

    $default  reduce using rule 26 (comando)


State 36

   28 matched_statement: outro_comando •

    $default  reduce using rule 28 (matched_statement)


State 37

   33 outro_comando: atribuicao •

    $default  reduce using rule 33 (outro_comando)


State 38

   34 outro_comando: chamada_funcao •

    $default  reduce using rule 34 (outro_comando)


State 39

   35 outro_comando: retorno •

    $default  reduce using rule 35 (outro_comando)


State 40

   36 outro_comando: repeticao •

    $default  reduce using rule 36 (outro_comando)


State 41

    8 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num TK_COM • literal

    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51

    literal  go to state 72


State 42

   14 lista_parametros: TK_COM • parametros

    TK_ID  shift, and go to state 43

    parametros  go to state 73
    parametro   go to state 47


State 43

   18 parametro: TK_ID • TK_ATRIB tipo_num

    TK_ATRIB  shift, and go to state 74


State 44

   11 cabecalho_funcao: TK_ID TK_SETA tipo_num $@1 lista_parametros_opcional • TK_ATRIB

    TK_ATRIB  shift, and go to state 75


State 45

   12 lista_parametros_opcional: lista_parametros •

    $default  reduce using rule 12 (lista_parametros_opcional)


State 46

   15 lista_parametros: parametros •

    $default  reduce using rule 15 (lista_parametros)


State 47

   16 parametros: parametro •
   17           | parametro • ',' parametros

    ','  shift, and go to state 76

    $default  reduce using rule 16 (parametros)


State 48

   27 matched_statement: TK_SE '(' • expressao ')' matched_statement TK_SENAO matched_statement
   29 unmatched_statement: TK_SE '(' • expressao ')' comando
   30                    | TK_SE '(' • expressao ')' matched_statement TK_SENAO unmatched_statement

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expressao            go to state 77
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 49

   40 chamada_funcao: TK_ID • '(' ')'
   41               | TK_ID • '(' argumentos ')'
   72 fator: TK_ID •

    '('  shift, and go to state 69

    $default  reduce using rule 72 (fator)


State 50

   37 literal: TK_LI_INTEIRO •

    $default  reduce using rule 37 (literal)


State 51

   38 literal: TK_LI_DECIMAL •

    $default  reduce using rule 38 (literal)


State 52

   75 fator: '(' • expressao ')'

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expressao            go to state 78
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 53

   68 expr_unaria: '+' • fator

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52

    literal         go to state 56
    chamada_funcao  go to state 57
    fator           go to state 79


State 54

   69 expr_unaria: '-' • fator

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52

    literal         go to state 56
    chamada_funcao  go to state 57
    fator           go to state 80


State 55

   70 expr_unaria: '!' • fator

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52

    literal         go to state 56
    chamada_funcao  go to state 57
    fator           go to state 81


State 56

   73 fator: literal •

    $default  reduce using rule 73 (fator)


State 57

   74 fator: chamada_funcao •

    $default  reduce using rule 74 (fator)


State 58

   44 retorno: TK_RETORNA expressao • TK_ATRIB tipo_num

    TK_ATRIB  shift, and go to state 82


State 59

   48 expressao: expr_logica_ou •
   49 expr_logica_ou: expr_logica_ou • '|' expr_logica_e

    '|'  shift, and go to state 83

    $default  reduce using rule 48 (expressao)


State 60

   50 expr_logica_ou: expr_logica_e •
   51 expr_logica_e: expr_logica_e • '&' expr_igualdade

    '&'  shift, and go to state 84

    $default  reduce using rule 50 (expr_logica_ou)


State 61

   52 expr_logica_e: expr_igualdade •
   53 expr_igualdade: expr_igualdade • TK_OC_EQ expr_relacional
   54               | expr_igualdade • TK_OC_NE expr_relacional

    TK_OC_EQ  shift, and go to state 85
    TK_OC_NE  shift, and go to state 86

    $default  reduce using rule 52 (expr_logica_e)


State 62

   55 expr_igualdade: expr_relacional •
   56 expr_relacional: expr_relacional • '<' expr_aditiva
   57                | expr_relacional • '>' expr_aditiva
   58                | expr_relacional • TK_OC_LE expr_aditiva
   59                | expr_relacional • TK_OC_GE expr_aditiva

    TK_OC_LE  shift, and go to state 87
    TK_OC_GE  shift, and go to state 88
    '<'       shift, and go to state 89
    '>'       shift, and go to state 90

    $default  reduce using rule 55 (expr_igualdade)


State 63

   60 expr_relacional: expr_aditiva •
   61 expr_aditiva: expr_aditiva • '+' expr_multiplicativa
   62             | expr_aditiva • '-' expr_multiplicativa

    '+'  shift, and go to state 91
    '-'  shift, and go to state 92

    $default  reduce using rule 60 (expr_relacional)


State 64

   63 expr_aditiva: expr_multiplicativa •
   64 expr_multiplicativa: expr_multiplicativa • '*' expr_unaria
   65                    | expr_multiplicativa • '/' expr_unaria
   66                    | expr_multiplicativa • '%' expr_unaria

    '*'  shift, and go to state 93
    '/'  shift, and go to state 94
    '%'  shift, and go to state 95

    $default  reduce using rule 63 (expr_aditiva)


State 65

   67 expr_multiplicativa: expr_unaria •

    $default  reduce using rule 67 (expr_multiplicativa)


State 66

   71 expr_unaria: fator •

    $default  reduce using rule 71 (expr_unaria)


State 67

   45 repeticao: TK_ENQUANTO '(' • expressao ')' bloco_de_comandos

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expressao            go to state 96
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 68

   39 atribuicao: TK_ID TK_ATRIB • expressao

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expressao            go to state 97
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 69

   40 chamada_funcao: TK_ID '(' • ')'
   41               | TK_ID '(' • argumentos ')'

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    ')'            shift, and go to state 98
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    argumentos           go to state 99
    expressao            go to state 100
    expr_logica_ou       go to state 59
    expr_logica_e        go to state 60
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 70

   22 bloco_de_comandos: '[' $@3 sequencia_comandos ']' •

    $default  reduce using rule 22 (bloco_de_comandos)


State 71

   24 sequencia_comandos: comando sequencia_comandos •

    $default  reduce using rule 24 (sequencia_comandos)


State 72

    8 declaracao_variavel: TK_VAR TK_ID TK_ATRIB tipo_num TK_COM literal •

    $default  reduce using rule 8 (declaracao_variavel)


State 73

   14 lista_parametros: TK_COM parametros •

    $default  reduce using rule 14 (lista_parametros)


State 74

   18 parametro: TK_ID TK_ATRIB • tipo_num

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 101


State 75

   11 cabecalho_funcao: TK_ID TK_SETA tipo_num $@1 lista_parametros_opcional TK_ATRIB •

    $default  reduce using rule 11 (cabecalho_funcao)


State 76

   17 parametros: parametro ',' • parametros

    TK_ID  shift, and go to state 43

    parametros  go to state 102
    parametro   go to state 47


State 77

   27 matched_statement: TK_SE '(' expressao • ')' matched_statement TK_SENAO matched_statement
   29 unmatched_statement: TK_SE '(' expressao • ')' comando
   30                    | TK_SE '(' expressao • ')' matched_statement TK_SENAO unmatched_statement

    ')'  shift, and go to state 103


State 78

   75 fator: '(' expressao • ')'

    ')'  shift, and go to state 104


State 79

   68 expr_unaria: '+' fator •

    $default  reduce using rule 68 (expr_unaria)


State 80

   69 expr_unaria: '-' fator •

    $default  reduce using rule 69 (expr_unaria)


State 81

   70 expr_unaria: '!' fator •

    $default  reduce using rule 70 (expr_unaria)


State 82

   44 retorno: TK_RETORNA expressao TK_ATRIB • tipo_num

    TK_DECIMAL  shift, and go to state 17
    TK_INTEIRO  shift, and go to state 18

    tipo_num  go to state 105


State 83

   49 expr_logica_ou: expr_logica_ou '|' • expr_logica_e

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expr_logica_e        go to state 106
    expr_igualdade       go to state 61
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 84

   51 expr_logica_e: expr_logica_e '&' • expr_igualdade

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expr_igualdade       go to state 107
    expr_relacional      go to state 62
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 85

   53 expr_igualdade: expr_igualdade TK_OC_EQ • expr_relacional

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expr_relacional      go to state 108
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 86

   54 expr_igualdade: expr_igualdade TK_OC_NE • expr_relacional

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expr_relacional      go to state 109
    expr_aditiva         go to state 63
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 87

   58 expr_relacional: expr_relacional TK_OC_LE • expr_aditiva

    TK_ID          shift, and go to state 49
    TK_LI_INTEIRO  shift, and go to state 50
    TK_LI_DECIMAL  shift, and go to state 51
    '('            shift, and go to state 52
    '+'            shift, and go to state 53
    '-'            shift, and go to state 54
    '!'            shift, and go to state 55

    literal              go to state 56
    chamada_funcao       go to state 57
    expr_aditiva         go to state 110
    expr_multiplicativa  go to state 64
    expr_unaria          go to state 65
    fator                go to state 66


State 88

   59 expr_relacional: expr_relacional TK_OC_GE • expr_aditiva
